--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
 <h1>FOR YOU, MY LOVE <br> (❁´◡`❁)</h1>
 <p>A little place for you, whenever you need me 🤍</p>
- <img src="C:\Users\aser\OneDrive\Desktop\DO NOT OPEN!\img\HiPaint_1739505353722.gif" alt="Us" class="header-image">
+ <img src="HiPaint_1739505353722.gif" alt="Us" class="header-image">
 
  <audio autoplay loop>
   <source src="music/love-song.mp3" type="audio/mpeg">
@@ -54,7 +54,7 @@
 </button>
 
 <button onclick="location.href='write-message.html'">
-  ✍️ Write Me a Message
+  ✍️ Write a Message
 </button><br><br>
 
 <a class="special-link" href="love-test.html">Wag mo ako pindutin</a>
