--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
 <h1>FOR YOU, MY LOVE <br> (❁´◡`❁)</h1>
 <p>A little place for you, whenever you need me 🤍</p>
- <img src="HiPaint_1739505353722.gif" alt="Us" class="header-image">
+ <img src="HiPaint_1739505353722.gif" alt="gif" class="header-image">
 
  <audio autoplay loop>
   <source src="music/love-song.mp3" type="audio/mpeg">
