--- a/write-message.html
+++ b/write-message.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Write Me a Message</title>
+  <title>Write a Message</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="romantic-bg">
 
   <div class="card">
-    <h1>💌 Leave Me a Message</h1>
-    <p class="soft-text">Write something sweet for me to read anytime 🤍</p>
+    <h1>💌 Leave a Message whenever you need to...</h1>
+    <p class="soft-text">Kung feeling mo tinalikuran kana ng lahat at ayaw mo ng mga kausap, you can freely write here🤗</p>
 
     <textarea id="messageInput" placeholder="Type your message here..."></textarea>
 
